fix: thumbNav akward alignment on mobile sizes

--- a/css/main.css
+++ b/css/main.css
@@ -834,14 +834,30 @@ pre.scjSnipplet {
   padding: 5%;
 }
 .thumbNav img {
-  /* border-radius: 50%; */
   width: 80px;
   height: 80px;
 }
 .thumbNav a:hover {
   text-decoration: none;
 }
-
+@media only screen and (max-width: 465px) {
+  .thumbNav img {
+    width: 60px;
+    height: 60px;
+  }
+}
+@media only screen and (max-width: 355px) {
+  .thumbNav img {
+    width: 50px;
+    height: 50px;
+  }
+}
+@media only screen and (max-width: 295px) {
+  .thumbNav img {
+    width: 40px;
+    height: 40px;
+  }
+}
 .cirNav {
   border-radius: 50%;
 }
